# Nano-Boot

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
bootloader_components/main/: CMakeLists.txt  Kconfig  banner.c  banner.h  bootloader_start.c  find_partition.c  find_partition.h  flash_reader.c  flash_reader.h  handleUpload.c  handleUpload.h  pre_boot_condition_checkup.c  pre_boot_condition_checkup.h  read_ota_flag.c  read_ota_flag.h
bootloader_template/: bootloader_main.c
main/: APP_CODE.c  CMakeLists.txt  app.c  app_main.c  find_partition.c  find_partition.h  ledControl.c  ledControl.h  otaUpdate.c  otaUpdate.h  ota_flag.c  ota_flag.h  webServer.c  webServer.h  wifiSetup.c  wifiSetup.h  write_flash.c  write_flash.h
tools/: sign_tool.py
